d/control: add missing build deps

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: appstream-util,
                libgirepository1.0-dev,
                libglib2.0-dev,
                libgtk-3-dev,
+               libhandy-0.0-dev,
                libsecret-1-dev,
                libzbar-dev,
                help2man,
@@ -30,7 +31,8 @@ Vcs-Git: https://salsa.debian.org/python-team/packages/gnome-authenticator.git
 
 Package: gnome-authenticator
 Architecture: all
-Depends: gir1.2-secret-1,
+Depends: gir1.2-handy-1,
+         gir1.2-secret-1,
          python3-bs4,
          python3-gi,
          python3-pil,
