d/tests: allow stderr

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,6 +1,7 @@
 Test-Command: xvfb-run /usr/bin/authenticator --help
-Restrictions: superficial
-Depends: gir1.2-secret-1,
+Restrictions: allow-stderr superficial
+Depends: gir1.2-handy-0.0,
+         gir1.2-secret-1,
          python3-bs4,
          python3-gi,
          python3-pil,
