--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,22 @@
 #!/usr/bin/make -f
 
-export PYBUILD_INSTALL_ARGS=--install-lib=/usr/share/gnome-authenticator/ --install-scripts=/usr/share/gnome-authenticator
+include /usr/share/dpkg/default.mk
+include /usr/share/rustc/architecture.mk
+export CFLAGS CXXFLAGS CPPFLAGS LDFLAGS
+export DEB_HOST_RUST_TYPE DEB_HOST_GNU_TYPE
+export PATH := /usr/share/cargo/bin:$(PATH)
+export CARGO=/usr/share/cargo/bin/cargo
+export CARGO_HOME=$(CURDIR)/debian/cargo_home
+export CARGO_REGISTRY=$(CURDIR)/debian/cargo_registry
+export DEB_CARGO_CRATE=$(DEB_SOURCE)_$(DEB_VERSION_UPSTREAM)
+export DEB_BUILD_MAINT_OPTIONS=hardening=+bindnow
 
 %:
-	dh $@ --with python3
+	dh $@
+
+execute_before_dh_auto_configure:
+	$(CARGO) prepare-debian debian/cargo_registry --link-from-system
+	mv Cargo.lock debian/
+
+execute_after_dh_auto_build:
+	mv debian/Cargo.lock .
