treewide: apply debian patches

--- a/data/resources/gtk/ui/window.ui.in
+++ b/data/resources/gtk/ui/window.ui.in
@@ -260,7 +260,7 @@
                   <object class="GtkImage" id="qr_scanner_image">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="icon_name">qrscanner-symbolic</property>
+                    <property name="icon_name">edit-select-all-symbolic</property>
                     <style>
                       <class name="dim-label"/>
                     </style>
